--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: load_switch
-description: A highly customizable toggle switch with a loading state.
+description: A highly customizable toggle switch with a loading state. Useful when getting data from remote calls.
 version: 1.1.1
 homepage: https://github.com/esentis/load_switch
 
