--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,13 +13,12 @@ jobs:
       id-token: write # Required for authentication using OIDC
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install Flutter
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.19.0"
-          channel: "stable"
-      - run: flutter --version
+          channel: "stable" # or: 'beta', 'dev', 'master' (or 'main')
+        run: flutter --version
       - uses: dart-lang/setup-dart@v1
       - name: Install dependencies
         run: flutter pub get
