--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,12 +13,9 @@ jobs:
       id-token: write # Required for authentication using OIDC
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Install Flutter
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable" # or: 'beta', 'dev', 'master' (or 'main')
-        run: flutter --version
+        uses: subosito/flutter-action@v2
       - uses: dart-lang/setup-dart@v1
       - name: Install dependencies
         run: flutter pub get
