--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
-
+.DS_Store
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
